--- a/app/algorithm-selector/algorithm-data-form.component.html
+++ b/app/algorithm-selector/algorithm-data-form.component.html
@@ -1,48 +1,51 @@
 {{diagnostic}}
 <div class="container">
-  <div [hidden]="submitted">
-    <h1>Hero Form</h1>
-    <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
-      <div class="form-group">
-          
-          
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" required
-          [(ngModel)]="model.sortInput"
-            ngControl="name"  #name="ngForm" >
-        <div [hidden]="name.valid" class="alert alert-danger">
-          Name is required
-        </div>
-      </div>
-      
-            
-      <div class="form-group">
-        <label for="power">Hero Power</label>
-        <select class="form-control" required
-          [(ngModel)]="model.power"
-            ngControl="power" #power="ngForm" >
-          <option *ngFor="#p of powers" [value]="p">{{p}}</option>
-        </select>
-        <div [hidden]="power.valid" class="alert alert-danger">
-          Power is required
-        </div>
-      </div>
-      <button type="submit" class="btn btn-default"
-              [disabled]="!heroForm.form.valid">Submit</button>
-    </form>
-  </div>
-  <div [hidden]="!submitted">
-    <h2>You submitted the following:</h2>
-    <div class="row">
-      <div class="col-xs-3">Name</div>
-      <div class="col-xs-9  pull-left">{{ model.name }}</div>
+    <div [hidden]="submitted">
+        <h1>Hero Form</h1>
+
+        <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+
+
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" required
+                       [(ngModel)]="model.sortInput"
+                       ngControl="name" #name="ngForm">
+                <div [hidden]="name.valid" class="alert alert-danger">
+                    Name is required
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="power">Hero Power</label>
+                <select class="form-control" required
+                        [(ngModel)]="model.power"
+                        ngControl="power" #power="ngForm">
+                    <option *ngFor="#p of powers" [value]="p">{{p}}</option>
+                </select>
+                <div [hidden]="power.valid" class="alert alert-danger">
+                    Power is required
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-default"
+                    [disabled]="!heroForm.form.valid">Submit
+            </button>
+        </form>
+
     </div>
-    <div class="row">
-      <div class="col-xs-3">Power</div>
-      <div class="col-xs-9 pull-left">{{ model.power }}</div>
+
+    <div [hidden]="!submitted">
+        <h2>You submitted the following:</h2>
+        <div class="row">
+            <div class="col-xs-3">Name</div>
+            <div class="col-xs-9  pull-left">{{ model.sortInput }}</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">Power</div>
+            <div class="col-xs-9 pull-left">{{ model.power }}</div>
+        </div>
+        <br>
+        <button class="btn btn-default" (click)="submitted=false">Edit</button>
     </div>
-    <br>
-    <button class="btn btn-default" (click)="submitted=false">Edit</button>
-  </div>
 </div>
