--- a/app/algorithm-selector/algorithm-data-form.component.html
+++ b/app/algorithm-selector/algorithm-data-form.component.html
@@ -1,31 +1,27 @@
 {{diagnostic}}
 <div class="container">
     <div [hidden]="submitted">
-        <h1>Hero Form</h1>
-
         <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
-            <div class="form-group">
+            <fieldset class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" required
-                       [(ngModel)]="model.sortInput"
-                       ngControl="name" #name="ngForm">
+                       [(ngModel)]="model.input"
+                       ngControl="name" #name="ngForm" id="name">
                 <div [hidden]="name.valid" class="alert alert-danger">
                     Name is required
                 </div>
-            </div>
-
-            <div class="form-group">
-                <label for="power">Hero Power</label>
+            </fieldset>
+            <fieldset class="form-group">
+                <label for="sortType">Hero Power</label>
                 <select class="form-control" required
-                        [(ngModel)]="model.power"
-                        ngControl="power" #power="ngForm">
-                    <option *ngFor="#p of powers" [value]="p">{{p}}</option>
+                        [(ngModel)]="model.type"
+                        ngControl="sortType" #sortType="ngForm" id="sortType">
+                    <option *ngFor="#s of sortTypes" [value]="s">{{s}}</option>
                 </select>
-                <div [hidden]="power.valid" class="alert alert-danger">
+                <div [hidden]="sortType.valid" class="alert alert-danger">
                     Power is required
                 </div>
-            </div>
-
+            </fieldset>
             <button type="submit" class="btn btn-default"
                     [disabled]="!heroForm.form.valid">Submit
             </button>
@@ -33,16 +29,29 @@
     </div>
 
     <div [hidden]="!submitted">
-        <h2>You submitted the following:</h2>
         <div class="row">
-            <div class="col-xs-3">Name</div>
-            <div class="col-xs-9  pull-left">{{ model.sortInput }}</div>
-        </div>
-        <div class="row">
-            <div class="col-xs-3">Power</div>
-            <div class="col-xs-9 pull-left">{{ model.power }}</div>
+            <div class="col-xs-6">
+                <div class="row">
+                    <div class="col-xs-6 text-center">Your Input</div>
+                    <div class="col-xs-6 text-center">{{ model.input }}</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-6 text-center">Your Output</div>
+                    <div class="col-xs-6 text-center">{{ sortedOutput }}</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-6 text-center">Sorting Method</div>
+                    <div class="col-xs-6 text-center">{{ model.type }}</div>
+                </div>
+            </div>
+            <div class="col-xs-6  text-left">
+                  <pre>
+                    {{ algoText }}
+                  </pre>
+            </div>
         </div>
         <br>
         <button class="btn btn-default" (click)="submitted=false">Edit</button>
+
     </div>
 </div>
