--- a/app/algorithm-selector/algorithm-data-form.component.html
+++ b/app/algorithm-selector/algorithm-data-form.component.html
@@ -19,7 +19,7 @@
                     <option *ngFor="#s of sortTypes" [value]="s">{{s}}</option>
                 </select>
                 <div [hidden]="sortType.valid" class="alert alert-danger">
-                    Power is required
+                    Sort type is required
                 </div>
             </fieldset>
             <button type="submit" class="btn btn-default"
@@ -52,6 +52,5 @@
         </div>
         <br>
         <button class="btn btn-default" (click)="submitted=false">Edit</button>
-
     </div>
 </div>
